# downscaling

./: .gitignore  AUDIT.md  CLAUDE.md  README.md  gcam_country_region1120.xlsx  pyproject.toml
DSCALE/: .gitignore  README.md  env_py37.yaml  pyproject.toml
DSCALE/downscaler/: AFOLU_emissions.py  CCS_CO2_GDP_Prices_January_3.py  Electricity_2b.py  Energy_demand_downs_1.py  Energy_demand_sectors_harmonization_1b.py  Policies_emissions_4.py  Primary_Energy_2a.py  Step0_interpolate_regional_data.py  Step_5_Scenario_explorer_5.py  Step_5b_emissions_by_sector_5b.py  Step_5c_Non_CO2_emissions_by_sector_5c.py  Step_5cbis_Secondary_energy_and_imports_5c_bis.py  Step_5d_aggregated_regions_5d.py  Step_5e_historical_harmo.py  Wrapper_all_steps.py  __init__.py  call.py  constants.py  create_regional_files_for_hindcasting.py  fit_funcs.py  fixtures.py  input_caching.py  mapping.py  nested_function_caching_test.py  run_multiple_files.py  step1b_total_as_sum_of_subsectors.py  top_20_measures.py  trade_fossil_2c.py  utils.py  utils_dictionary.py  utils_list.py  utils_pandas.py  utils_simple_downscaling.py  utils_string.py
compare/: compare_results.py  run_all.py
compare/common/: config.py  conservation.py  downscale.py  io.py  mapping.py
compare/dscale/: __init__.py  downscale_tfc.py  dscale_official.py
compare/kaya/: downscale_tfc.py
compare/logit/: downscale_tfc.py
compare/output/: dscale_CO2_downscaled_SSP126.xlsx  dscale_CO2_downscaled_SSP245.xlsx  dscale_CO2_downscaled_SSP434.xlsx  dscale_CO2_downscaled_SSP460.xlsx  dscale_Elec_downscaled_SSP126.xlsx  dscale_Elec_downscaled_SSP245.xlsx  dscale_Elec_downscaled_SSP434.xlsx  dscale_Elec_downscaled_SSP460.xlsx  dscale_FossilTES_downscaled_SSP126.xlsx  dscale_FossilTES_downscaled_SSP245.xlsx  dscale_FossilTES_downscaled_SSP434.xlsx  dscale_FossilTES_downscaled_SSP460.xlsx  dscale_GreenElec_downscaled_SSP126.xlsx  dscale_GreenElec_downscaled_SSP245.xlsx  dscale_GreenElec_downscaled_SSP434.xlsx  dscale_GreenElec_downscaled_SSP460.xlsx  dscale_IndustryCO2_downscaled_SSP126.xlsx  dscale_IndustryCO2_downscaled_SSP245.xlsx  (+174 more)
docs/: experiment_report.md  plots-guide.md
(+15 files in other folders)
