[project]
name = "downscaling"
version = "0.1.0"
description = "GCAM regional-to-country downscaling for SDG indicators"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "numpy>=1.24",
    "matplotlib>=3.10.9",
    "scipy>=1.10",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.pytest.ini_options]
markers = [
    "slow: integration tests that run full downscaling (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
